; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_fgetgrent_sane.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_fgetgrent_sane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.group = type { i32 }

@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fgetgrent_sane(%struct.group** %0, %struct.group** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.group**, align 8
  %5 = alloca %struct.group**, align 8
  %6 = alloca %struct.group*, align 8
  store %struct.group** %0, %struct.group*** %4, align 8
  store %struct.group** %1, %struct.group*** %5, align 8
  %7 = load %struct.group**, %struct.group*** %5, align 8
  %8 = call i32 @assert(%struct.group** %7)
  %9 = load %struct.group**, %struct.group*** %4, align 8
  %10 = call i32 @assert(%struct.group** %9)
  store i64 0, i64* @errno, align 8
  %11 = load %struct.group**, %struct.group*** %4, align 8
  %12 = call %struct.group* @fgetgrent(%struct.group** %11)
  store %struct.group* %12, %struct.group** %6, align 8
  %13 = load %struct.group*, %struct.group** %6, align 8
  %14 = icmp ne %struct.group* %13, null
  br i1 %14, label %22, label %15

15:                                               ; preds = %2
  %16 = load i64, i64* @errno, align 8
  %17 = load i64, i64* @ENOENT, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32, i32* @EIO, align 4
  %21 = call i32 @errno_or_else(i32 %20)
  store i32 %21, i32* %3, align 4
  br label %30

22:                                               ; preds = %15, %2
  %23 = load %struct.group*, %struct.group** %6, align 8
  %24 = load %struct.group**, %struct.group*** %5, align 8
  store %struct.group* %23, %struct.group** %24, align 8
  %25 = load %struct.group*, %struct.group** %6, align 8
  %26 = icmp ne %struct.group* %25, null
  %27 = xor i1 %26, true
  %28 = xor i1 %27, true
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %22, %19
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @assert(%struct.group**) #1

declare dso_local %struct.group* @fgetgrent(%struct.group**) #1

declare dso_local i32 @errno_or_else(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
